fix bug when change theme, the nav-bar shift up once time then return to in position

--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,8 @@
 
 #logo {
   content: var(--logo);
+  width: 250px;
+  height: 100px;
 }
 * {
   margin: 0;
